--- a/HW2/cipher.ipynb
+++ b/HW2/cipher.ipynb
@@ -41,7 +41,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pyc"
+   ]
   }
  ],
  "metadata": {
